@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2006, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * -----------
  * Marker.java
  * -----------
- * (C) Copyright 2002-2006, by Object Refinery Limited.
+ * (C) Copyright 2002-2007, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   Nicolas Brodu;
@@ -54,8 +54,9 @@
  *               applied to the domain or range axis as appropriate (DG);
  * 06-Jun-2005 : Fix equals() method to handle GradientPaint (DG);
  * 19-Aug-2005 : Changed constructor from public --> protected (DG);
- * ------------- JFREECHART 1.0.0 ---------------------------------------------
+ * ------------- JFREECHART 1.0.x ---------------------------------------------
  * 05-Sep-2006 : Added MarkerChangeListener support (DG);
+ * 26-Sep-2007 : Fix for serialization bug 1802195 (DG);
  *
  */
 
@@ -526,6 +527,8 @@ public abstract class Marker implements Cloneable, Serializable {
      *
      * @param listener  the object to be registered.
      * 
+     * @see #removeChangeListener(MarkerChangeListener)
+     * 
      * @since 1.0.3
      */
     public void addChangeListener(MarkerChangeListener listener) {
@@ -536,6 +539,8 @@ public abstract class Marker implements Cloneable, Serializable {
      * Unregisters an object for notification of changes to the marker.
      *
      * @param listener  the object to be unregistered.
+     * 
+     * @see #addChangeListener(MarkerChangeListener)
      * 
      * @since 1.0.3
      */
@@ -671,6 +676,7 @@ public abstract class Marker implements Cloneable, Serializable {
         this.outlinePaint = SerialUtilities.readPaint(stream);
         this.outlineStroke = SerialUtilities.readStroke(stream);
         this.labelPaint = SerialUtilities.readPaint(stream);
+        this.listenerList = new EventListenerList();
     }
 
 }
